# codebase-workflow-analyzer

./: .gitignore  CLAUDE.md  COMMANDS.md  Cargo.toml  README.md  TODO-SOTA-IMPLEMENTATION.md  WORKING_CLI_ONLY.md
complete-analysis/: README.md  analysis-report.md
configs/: analyzer_config.yaml
configs/data/: business_domains.json  ccpm_templates.json  context_management.json  document_templates.json  framework_commands.json  frameworks.json  llm_prompt_templates.json  ollama_config.json  project_types.json  user_story_templates.json  workflow_templates.json
docs/: architecture-overview.md  architecture.md  ast-analysis.md  code-analyzer-workflow.mmd  framework-analysis-approach.md  framework-analysis.md  hierarchical-implementation-plan.md  implementation-roadmap.md  llm-integration.md  local-llm-feasibility.md
enhanced-analysis/: README.md  analysis-report.md
examples/sample-react-app/: package.json
examples/sample-react-app/src/: App.tsx
phase1-test-results/: domain_analysis.json  framework_analysis.json  phase1_summary.md
src/: lib.rs  main.rs
src/analyzers/: mod.rs
src/analyzers/java/: mod.rs  (+1 more)
src/cli/: mod.rs
src/core/: ast_analyzer.rs  ast_integration_test.rs  business_context_config.rs  business_context_grounding.rs  business_domain_engine.rs  business_purpose_extractor.rs  cache_manager.rs  code_reality_analyzer.rs  config.rs  conflict_resolution_engine.rs  context_aware_ast_analyzer.rs  context_aware_framework_detector.rs  context_aware_test.rs  context_integration_tests.rs  context_traits.rs  context_types.rs  danet_detector.rs  documentation_claims_extractor.rs  documentation_extractor.rs  dual_category_status_analyzer.rs  enhanced_framework_detector.rs  framework_detector.rs  framework_validation.rs  hierarchical_context_manager.rs  hierarchical_result_fusion.rs  integration_demo.rs  interactive_refinement.rs  llm_business_extractor.rs  mod.rs  performance_monitor.rs  project_analyzer.rs  project_classifier.rs  refinement_structures.rs  self_analysis_test.rs  status_inference_engine.rs  template_engine.rs  todo_scanner.rs  types.rs
src/generators/: ccpm_import.rs  claude_spec_context.rs  comprehensive_analysis.rs  executive_summary.rs  markdown.rs  mod.rs  prd.rs  refined_ccmp_import.rs  refined_claude_spec_context.rs  stories.rs  technical_docs.rs  yaml_analysis.rs
src/integrations/: git.rs  github.rs  jira.rs  mod.rs
src/intelligence/: llm_business_analyzer.rs  llm_client.rs  mod.rs  ollama_manager.rs
src/server/: api.rs  mod.rs  web.rs
web/: index.html
(+16 files in other folders)
